# vibe-check

./: CLAUDE.md
vc-be/: .env.example  agent.py  ingest.py  main.py  pyproject.toml
vc-be/coach/: config.py  gemini.py  memory.py  pinecone_index.py  prompts.py  rag.py  report.py
vc-fe/: package-lock.json  package.json
vc-fe/app/: globals.css  layout.tsx  page.tsx
vc-fe/app/_components/: AnalysisReport.tsx  ChatShell.tsx  MessageInput.tsx  MessageList.tsx  ToneSelector.tsx  VoicePanel.tsx  report-data.ts  types.ts
vc-fe/app/report/: page.tsx
